--- a/src/views/LoginPageView.fxml
+++ b/src/views/LoginPageView.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,14 +20,14 @@
                   <Font name="Arial Rounded MT Bold" size="50.0" />
                </font>
             </Label>
-            <Label fx:id="greetingsLabel" layoutX="127.0" layoutY="456.0" text="Hello!">
+            <Label fx:id="greetingsMessageLabel" alignment="TOP_LEFT" layoutX="127.0" layoutY="474.0" prefHeight="133.0" prefWidth="507.0" style="-fx-wrap-text: True;" text="You are literally out of the comprehension of time.">
                <font>
-                  <Font name="Arial Rounded MT Bold" size="40.0" />
+                  <Font name="Arial Rounded MT Bold" size="30.0" />
                </font>
             </Label>
-            <Label fx:id="greetingsMessageLabel" alignment="TOP_LEFT" layoutX="127.0" layoutY="504.0" prefHeight="133.0" prefWidth="507.0" style="-fx-wrap-text: True;" text="You are literally out of the comprehension of time.">
+            <Label fx:id="greetingsLabel" layoutX="127.0" layoutY="426.0" text="Hello!">
                <font>
-                  <Font name="Arial Rounded MT Bold" size="35.0" />
+                  <Font name="Arial Rounded MT Bold" size="40.0" />
                </font>
             </Label>
          </children></Pane>
@@ -31,14 +35,44 @@
          <children>
             <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/close_icon.png" />
+                  <Image url="@../images/close_icon.png" />
                </image>
             </ImageView>
             <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/minimize_icon.png" />
+                  <Image url="@../images/minimize_icon.png" />
                </image>
             </ImageView>
+            <Label layoutX="216.0" layoutY="264.0" text="Login" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="50.0" />
+               </font>
+            </Label>
+            <TextField fx:id="usernameField" layoutX="216.0" layoutY="353.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="username" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </TextField>
+            <PasswordField fx:id="passwordField" layoutX="216.0" layoutY="418.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </PasswordField>
+            <CheckBox id="checkbox" fx:id="checkboxKeepLoggedIn" layoutX="216.0" layoutY="488.0" mnemonicParsing="false" onKeyPressed="#keyPressed" style="-fx-text-fill: white;" text="Keep me logged in.">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+            </CheckBox>
+            <Button fx:id="loginButton" layoutX="216.0" layoutY="545.0" mnemonicParsing="false" onAction="#loginClicked" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Login" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="registerButton" layoutX="421.0" layoutY="545.0" mnemonicParsing="false" onAction="#registerClicked" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="16.0" />
+               </font>
+            </Button>
          </children></Pane>
    </children>
 </AnchorPane>
