--- a/src/views/LoginPageView.fxml
+++ b/src/views/LoginPageView.fxml
@@ -33,12 +33,12 @@
          </children></Pane>
       <Pane layoutX="700.0" prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #2B2B2B;">
          <children>
-            <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/close_icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/minimize_icon.png" />
                </image>
@@ -63,16 +63,21 @@
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
             </CheckBox>
-            <Button fx:id="loginButton" layoutX="216.0" layoutY="545.0" mnemonicParsing="false" onAction="#loginClicked" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Login" textAlignment="CENTER">
+            <Button fx:id="loginButton" layoutX="216.0" layoutY="545.0" mnemonicParsing="false" onAction="#loginClicked" onMouseEntered="#LoginButtonHovered" onMouseExited="#LoginButtonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Login" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="registerButton" layoutX="421.0" layoutY="545.0" mnemonicParsing="false" onAction="#registerClicked" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
+            <Button fx:id="registerButton" layoutX="421.0" layoutY="545.0" mnemonicParsing="false" onAction="#registerClicked" onMouseEntered="#RegisterButtonHovered" onMouseExited="#RegisterButtonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
             </Button>
+            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="216.0" layoutY="631.0" prefHeight="48.0" prefWidth="318.0" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="16.0" />
+               </font>
+            </Label>
          </children></Pane>
    </children>
 </AnchorPane>
