--- a/src/views/LoginPageView.fxml
+++ b/src/views/LoginPageView.fxml
@@ -73,7 +73,7 @@
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
             </Button>
-            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="216.0" layoutY="631.0" prefHeight="48.0" prefWidth="318.0" textFill="WHITE">
+            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="216.0" layoutY="631.0" prefHeight="104.0" prefWidth="318.0" style="-fx-wrap-text: true;" textFill="WHITE">
                <font>
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
