--- a/src/views/RegisterPageView.fxml
+++ b/src/views/RegisterPageView.fxml
@@ -32,17 +32,17 @@
          </children></Pane>
       <Pane layoutX="700.0" prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #2B2B2B;">
          <children>
-            <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/close_icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/minimize_icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="goBackButton" fitHeight="27.0" fitWidth="27.0" layoutX="606.0" layoutY="14.0" onMouseClicked="#goBackClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="606.0" layoutY="14.0" onMouseClicked="#goBackClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/back_icon.png" />
                </image>
@@ -52,32 +52,32 @@
                   <Font name="Arial Rounded MT Bold" size="50.0" />
                </font>
             </Label>
-            <TextField fx:id="forenameField" layoutX="216.0" layoutY="353.0" prefHeight="48.0" prefWidth="318.0" promptText="first name" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+            <TextField fx:id="forenameField" layoutX="216.0" layoutY="353.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="first name" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </TextField>
-            <TextField fx:id="usernameField" layoutX="216.0" layoutY="415.0" prefHeight="48.0" prefWidth="318.0" promptText="username" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+            <TextField fx:id="usernameField" layoutX="216.0" layoutY="415.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="username" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </TextField>
-            <PasswordField fx:id="passwordField" layoutX="216.0" layoutY="475.0" prefHeight="48.0" prefWidth="318.0" promptText="password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+            <PasswordField fx:id="passwordField" layoutX="216.0" layoutY="475.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </PasswordField>
-            <PasswordField fx:id="repeatPasswordField" layoutX="217.0" layoutY="536.0" prefHeight="48.0" prefWidth="318.0" promptText="repeat password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+            <PasswordField fx:id="repeatPasswordField" layoutX="217.0" layoutY="536.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="repeat password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </PasswordField>
-            <Button fx:id="registerButton" layoutX="319.0" layoutY="608.0" mnemonicParsing="false" onAction="#registerClicked" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
+            <Button fx:id="registerButton" layoutX="319.0" layoutY="608.0" mnemonicParsing="false" onAction="#registerClicked" onKeyPressed="#keyPressed" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
             </Button>
-            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="217.0" layoutY="673.0" prefHeight="48.0" prefWidth="318.0" textFill="WHITE">
+            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="217.0" layoutY="673.0" prefHeight="161.0" prefWidth="318.0" style="-fx-wrap-text: true;" textFill="WHITE">
                <font>
                   <Font name="Arial Rounded MT Bold" size="16.0" />
                </font>
