--- a/src/views/MarksView.fxml
+++ b/src/views/MarksView.fxml
@@ -131,17 +131,17 @@
          </children></Pane>
       <Pane layoutX="211.0" prefHeight="900.0" prefWidth="1190.0" style="-fx-background-color: #2B2B2B;">
          <children>
-            <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="1095.0" layoutY="14.0" onMouseClicked="#goBackClicked">
+            <ImageView fx:id="goBackButton" fitHeight="27.0" fitWidth="27.0" layoutX="1095.0" layoutY="14.0" onMouseClicked="#goBackClicked" onMouseEntered="#goBackHovered" onMouseExited="#goBackExited">
                <image>
                   <Image url="@../images/back_icon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="1122.0" layoutY="14.0" onMouseClicked="#minimizeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="1122.0" layoutY="14.0" onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/minimize_icon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="29.0" fitWidth="27.0" layoutX="1149.0" layoutY="14.0" onMouseClicked="#closeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="1149.0" layoutY="14.0" onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/close_icon.png" />
                </image>
