--- a/src/views/MarksPopupViewAssignment.fxml
+++ b/src/views/MarksPopupViewAssignment.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ColorPicker?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,24 +8,24 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MarksPopupModuleController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MarksPopupAssignmentController">
    <children>
       <Pane layoutX="4.0" layoutY="4.0" prefHeight="593.0" prefWidth="693.0" style="-fx-background-color: #2B2B2B;">
          <children>
-            <Label fx:id="titleLabel" layoutX="79.0" layoutY="36.0" prefHeight="69.0" prefWidth="269.0" text="Word Module." textFill="WHITE">
+            <Label fx:id="titleLabel" layoutX="89.0" layoutY="50.0" prefHeight="69.0" prefWidth="339.0" text="Word Assignment." textFill="WHITE">
                <font>
                   <Font name="Arial Rounded MT Bold" size="35.0" />
                </font>
             </Label>
-            <Line endX="421.0" layoutX="180.0" layoutY="105.0" startX="-100.0" stroke="#e6bb9a" strokeWidth="3.0" />
-            <Pane layoutX="78.0" layoutY="128.0" prefHeight="57.0" prefWidth="538.0">
+            <Line endX="421.0" layoutX="190.0" layoutY="119.0" startX="-100.0" stroke="#e6bb9a" strokeWidth="3.0" />
+            <Pane layoutX="89.0" layoutY="135.0" prefHeight="69.0" prefWidth="538.0">
                <children>
-                  <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Module Code:" textFill="WHITE">
+                  <Label prefHeight="69.0" prefWidth="269.0" text="Name:" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="moduleCodeField" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="e.g. ORG1001" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="nameField" layoutX="300.0" layoutY="7.0" prefHeight="56.0" prefWidth="224.0" promptText="e.g. Exam" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                      <font>
                         <Font name="Arial" size="16.0" />
                      </font>
@@ -44,42 +42,51 @@
                   <Image url="@../images/minimize_icon.png" />
                </image>
             </ImageView>
-            <Pane layoutX="78.0" layoutY="185.0" prefHeight="57.0" prefWidth="538.0">
+            <Pane layoutX="89.0" layoutY="204.0" prefHeight="69.0" prefWidth="538.0">
                <children>
-                  <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Module Name:" textFill="WHITE">
+                  <Label prefHeight="69.0" prefWidth="269.0" text="Weight:" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="moduleNameField" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="e.g. Basics of Organisation" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="weightField" layoutX="300.0" layoutY="7.0" prefHeight="56.0" prefWidth="224.0" promptText="e.g. 25%" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                      <font>
                         <Font name="Arial" size="16.0" />
                      </font>
                   </TextField>
                </children>
             </Pane>
-            <Pane layoutX="78.0" layoutY="242.0" prefHeight="57.0" prefWidth="538.0">
+            <Pane layoutX="89.0" layoutY="273.0" prefHeight="69.0" prefWidth="538.0">
                <children>
-                  <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Credits:" textFill="WHITE">
+                  <Label prefHeight="69.0" prefWidth="269.0" text="Attempted?" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="creditsField" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="e.g. 20" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+               </children>
+            </Pane>
+            <Pane layoutX="89.0" layoutY="342.0" prefHeight="69.0" prefWidth="538.0">
+               <children>
+                  <Label prefHeight="69.0" prefWidth="269.0" text="Score:" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="25.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="scoreField" layoutX="300.0" layoutY="7.0" prefHeight="56.0" prefWidth="68.0" promptText="e.g. 4" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                      <font>
                         <Font name="Arial" size="16.0" />
                      </font>
                   </TextField>
-               </children>
-            </Pane>
-            <Pane layoutX="78.0" layoutY="299.0" prefHeight="57.0" prefWidth="538.0">
-               <children>
-                  <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Semester:" textFill="WHITE">
+                  <TextField fx:id="maxScoreField" layoutX="456.0" layoutY="7.0" prefHeight="56.0" prefWidth="68.0" promptText="e.g. 8" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                      <font>
-                        <Font name="Arial Rounded MT Bold" size="25.0" />
+                        <Font name="Arial" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label alignment="CENTER" layoutX="368.0" layoutY="1.0" prefHeight="69.0" prefWidth="88.0" text="out of" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="20.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="semesterComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Semester." style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3; -fx-text-fill: white;" />
                </children>
             </Pane>
             <Pane fx:id="actionButton" layoutX="266.0" layoutY="428.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
@@ -96,7 +103,7 @@
                   </Label>
                </children>
             </Pane>
-            <Pane fx:id="deleteButton" layoutX="266.0" layoutY="507.0" onMouseClicked="#deleteButtonClicked" onMouseEntered="#deleteButtonHovered" onMouseExited="#deleteButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
+            <Pane fx:id="deleteButton" layoutX="266.0" layoutY="504.0" onMouseClicked="#deleteButtonClicked" onMouseEntered="#deleteButtonHovered" onMouseExited="#deleteButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
                <children>
                   <ImageView fx:id="deleteButtonImage" fitHeight="35.0" fitWidth="35.0" layoutX="19.0" layoutY="15.0">
                      <image>
@@ -108,16 +115,6 @@
                         <Font name="Arial Rounded MT Bold" size="22.0" />
                      </font>
                   </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="78.0" layoutY="356.0" prefHeight="57.0" prefWidth="538.0">
-               <children>
-                  <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Colour:" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="25.0" />
-                     </font>
-                  </Label>
-                  <ColorPicker fx:id="colourPicker" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-radius: 10; -fx-border-width: 3; -fx-border-color: white;" />
                </children>
             </Pane>
          </children>
