--- a/src/views/MarksPopupViewAssignment.fxml
+++ b/src/views/MarksPopupViewAssignment.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -63,6 +64,11 @@
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
+                  <ToggleButton fx:id="attemptedButton" layoutX="300.0" layoutY="7.0" mnemonicParsing="false" onAction="#attemptedButtonClicked" prefHeight="56.0" prefWidth="224.0" style="-fx-background-color: none; -fx-text-fill: white; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" text="Yes  /  No">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="20.0" />
+                     </font>
+                  </ToggleButton>
                </children>
             </Pane>
             <Pane layoutX="89.0" layoutY="342.0" prefHeight="69.0" prefWidth="538.0">
