Work on displaying Years in Marks Tab

--- a/src/views/MarksView.fxml
+++ b/src/views/MarksView.fxml
@@ -314,7 +314,7 @@
                         <Font name="Arial Rounded MT Bold" size="30.0" />
                      </font>
                   </Label>
-                  <Label fx:id="pane6label1" layoutX="23.0" layoutY="106.0" prefHeight="68.0" prefWidth="139.0" style="-fx-wrap-text: true;" text="pane6Label1" textFill="#e6bb9a">
+                  <Label fx:id="pane6Label1" layoutX="23.0" layoutY="106.0" prefHeight="68.0" prefWidth="139.0" style="-fx-wrap-text: true;" text="pane6Label1" textFill="#e6bb9a">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
